# eno-number

./: Cargo.toml  Dockerfile  LICENSE  README.md  Rocket.toml  docker-compose.yml  musicbrainz-docker.patch
client/: Dockerfile  package.json
client/src/: App.tsx
client/src/components/backgroundGrid/: BackgroundGrid.module.scss  BackgroundGrid.tsx
client/src/components/grid/: Grid.module.scss  Grid.tsx  IGridProps.ts
client/src/components/grid/artistBox/: ArtistBox.module.scss  ArtistBox.tsx  IArtistBoxProps.ts
client/src/components/grid/artistBox/asyncImage/: AsyncImage.tsx  IAsyncImageProps.ts
client/src/services/: DatabaseService.ts  MusicBrainzService.ts
client/src/types/: IArtist.ts  ICalculation.ts
src/: cache.rs  calculator.rs  discogs.rs  main.rs  path_vec.rs  server.rs  settings.rs  structs.rs
src/database/: mod.rs  queries.rs
