[package]
name = "eno-number"
version = "0.1.0"
authors = ["Jake Stanger <mail@jstanger.dev>"]
edition = "2018"

[dependencies]
rocket = "0.4.5"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
redis = "0.17.0"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"

[dependencies.rocket_contrib]
version = "0.4.5"
features = ["json", "postgres_pool", "redis_pool"]

[dependencies.reqwest]
version = "0.10.8"
features = ["json", "blocking"]